# Med-Tech-RAG-App

./: .gitignore  constants.py  pyproject.toml
app/: rag_application.py
notebooks/project/: explore_lifepak.ipynb  rag_evaluation_draft.ipynb  state_attr_draft.ipynb  vector_storage.ipynb
ragapp/: device.py
ragapp/prompts/: __init__.py  device_classification.py  error_processing.py  prompts.py  query_answer.py  query_check.py  relevant_context_selection.py  rephrase.py
ragapp/rag/: med_agent_graph.py
ragapp/schema/: rag.py
